--- a/users/templates/registration/password_reset_confirm.html
+++ b/users/templates/registration/password_reset_confirm.html
@@ -1,18 +1,6 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport"
-              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Регистрация</title>
-        {% load static %}
-        <link rel="stylesheet" href="{% static 'pages/form.css' %}">
-    </head>
-    <body>
-        {% include 'header.html' %}
-    <main>
-            <div class="container">
+{% extends 'base.html' %}
+
+{% block content %}
 {% load user_filters %}
 
 {% if validlink %}
@@ -67,5 +55,4 @@
 </main>
 {% include 'footer.html' %}
  
-</body>
-</html>
+{% endblock %}
