--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,15 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Рецепты</title>
+{% extends 'base.html' %}
+{% block title%} Рецепты {% endblock%}
     {% load static %}
     {% csrf_token %}
-    {% load thumbnail %}
+    {% block static %}
     <link rel="stylesheet" href={% static 'pages/index.css' %}>
-</head>
-<body class="body">
-    {% include 'header.html' %}
+    {% endblock %}
+    {% load templates_extra %}
+    {% block content %}
     <main class="main container">
         <div class="main__header">
             <h1 class="main__title">Рецепты</h1>
-            {% load templates_extra %}
             <ul class="tags">
                 {% for tag in all_tags %}
                     <li class="tags__item">
@@ -32,31 +25,13 @@
         </div>
         <div class="card-list">
             {% for recipe in page %}
-        <div class="card" data-id="{{ recipe.id }}">
-            <a href="{% url 'recipes:recipe_view' recipe.author.username recipe.id %}" class="link" target="_blank"><img src="{{ recipe.image.url }}" alt="{{ recipe.name }}" class="card__image"></a>
-            <div class="card__body">
-                <a class="card__title link" href="{% url 'recipes:recipe_view' recipe.author.username recipe.id %}" target="_blank"> {{ recipe.title }}</a>
-                <ul class="card__items">
-                    {% for tag in recipe.tag.all %}
-                    <li class="card__item"><span class="badge badge_style_{{ tag.style }}">{{ tag.name }}</span></li>
-                    {% endfor %}
-                </ul>
-                <div class="card__items card__items_column">
-                    <p class="card__text"><span class="icon-time"></span> {{ recipe.duration }} мин.</p>
-                    <p class="card__text"><span class="icon-user"></span> <a href="{% url 'recipes:profile' recipe.author.username %}" style="color: black">{{ recipe.author.first_name }} {{ recipe.author.last_name }}</a></p>
-                </div>
-            </div>
-            <div class="card__footer">
-                {% include 'buy_button.html' %}
-                {% include 'favor_button.html' %}
-            </div>
-        </div>
+            {% include 'recipe_item.html' %}
     {% endfor %}
-        
+    {% csrf_token %}
     </div>
     {% include 'paginator.html' %} 
     </main>
-    {% include 'footer.html' %}
+
     <script src="{% static 'js/config/config.js' %}"></script>
     {% if user.is_authenticated %}
     <script src="{% static 'js/components/MainCards.js' %}"></script>
@@ -79,5 +54,4 @@
     <script src="{% static 'js/api/Api.js' %}"></script>
     <script src="{% static 'indexNotAuth.js' %}"></script>
     {% endif %}
-</body>
-</html>
+    {% endblock %}
