--- a/templates/profile.html
+++ b/templates/profile.html
@@ -29,7 +29,7 @@
         
         <div class="author-subscribe" data-author="{{ profile.id }}">
         {% if user.is_authenticated %}
-        {% if subs %}
+        {% if profile|is_follow:user %}
             <button class="button button_style_light-blue button_size_auto" name="subscribe"><span class="icon-check button__icon"></span>Отписаться от автора </button></p>
         {% else %}
             <p style="padding: 0 0 2em 0;"><button class="button button_style_light-blue button_size_auto" name="subscribe" data-out>Подписаться на автора</button></p>
