--- a/users/templates/registration/password_change_form.html
+++ b/users/templates/registration/password_change_form.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block pass_change %} <li class="nav__item nav__item_active"> {% endblock %}
 {% block content %}
 {% load user_filters %}
 <main class="main container">
