--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     {% block static %}
     <link rel="stylesheet" href={% static 'pages/index.css' %}>
     {% endblock %}
+    {% block index %} <li class="nav__item nav__item_active"> {% endblock %}
     {% load templates_extra %}
     {% block content %}
     <main class="main container">
@@ -17,7 +18,7 @@
                             id="{{ tag.pk }}"
                             class="tags__checkbox tags__checkbox_style_{{ tag.style }}
                             {% if tag.value in request.GET|get_filter_values %} tags__checkbox_active {% endif %}"
-                            href="/?{{ request|get_filter_link:tag }}"></a>
+                            href="{% url 'recipes:index' %}?{{ request|get_filter_link:tag }}"></a>
                         <span class="tags__label">{{ tag.name }}</span>
                     </li>
                 {% endfor %}
