--- a/templates/new_recipe.html
+++ b/templates/new_recipe.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block title%} Добавить рецепт {% endblock%}
     {% load static %}
+    {% block new_recipe %} <li class="nav__item nav__item_active"> {% endblock %}
     {% csrf_token %}
         {% load static %}
         {% block static %}
