--- a/templates/shop_list.html
+++ b/templates/shop_list.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block title%} Список покупок {% endblock%}
-    {% load static %}
+{% block shop %} <li class="nav__item nav__item_active"> {% endblock %}    
+{% load static %}
     {% csrf_token %}
     {% block static %}
     <link rel="stylesheet" href={% static 'pages/shopList.css' %}>
